services/image-crop/kubernetes/image-crop.stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  # This name uniquely identifies the stateful set
  name: image-crop-stateful
  labels:
    app: image-crop
spec:
  serviceName: image-crop
  replicas: 1
  selector:
    matchLabels:
      app: image-crop
  template:
    metadata:
      labels:
        app: image-crop
    spec:
      containers:
      - name: image-crop
        image: ghcr.io/csia-pme/csia-pme-image-crop:latest
        # If you build the image locally, change the next line to `imagePullPolicy: Never` - there is no need to pull the image
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
