services/image-crop/kubernetes/image-crop.service.yml
apiVersion: v1
kind: Service
metadata:
  name: image-crop-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 9090
      targetPort: 80
      protocol: TCP
  selector:
    app: image-crop
